[metadata]
name = polarityjam
version = 0.1.1
description = Feature extraction pipeline for vascular cell data
long_description = file: README.md
long_description_content_type = text/markdown
url =  https://www.polarityjam.com
author = Jan Philipp Albrecht, Wolfgang Giese, Leo Epstein
maintainer = Jan Philipp Albrecht, Wolfgang Giese, Leo Epstein
maintainer_email = j.p.albrecht@fu-berlin.de
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = vascular cell, imaging, data analysis
project_urls =
    Source=https://github.com/polarityjam/polarityjam
    Tracker=https://github.com/polarityjam/polarityjam/issues

[options]
package_dir =
    =src
packages = find_namespace:
install_requires =
    numpy==1.21.5
    cellpose==1.0.1
    pandas==1.4.1
    scipy==1.8.0
    scikit-image==0.19.2
    matplotlib==3.5.1
	PyYAML==6.0
	cmocean==2.0
	pyunpack==0.2.2
    networkx==2.6.3
    Shapely==1.8.2

python_requires = ~=3.8

[options.packages.find]
where = src

[options.package_data]
YML = src/*.yml
CSV = src/*.csv
JSON = src/*.json

[options.entry_points]
console_scripts =
    polarityjam=polarityjam.__main__:main
    polarityjam_test=polarityjam.test.__main__:main

[flake8]
max-line-length = 120
